fix container width maybe with hidden overflow

--- a/LaCelians/style.css
+++ b/LaCelians/style.css
@@ -38,7 +38,7 @@ img{
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-  #container {background: green;
+  #container {background: blue;
   overflow: hidden;}
 }
 
